tests/ui/feature-gates/feature-gate-asm_experimental_arch.stderr
error[E0658]: inline assembly is not stable yet on this architecture
  --> $DIR/feature-gate-asm_experimental_arch.rs:19:5
   |
LL |     asm!("");
   |     ^^^^^^^^
   |
   = note: see issue #93335 <https://github.com/crablang/crablang/issues/93335> for more information
   = help: add `#![feature(asm_experimental_arch)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
